# learn-cuda-cute-triton

./: .gitignore  README.md  add.cu  interview_qa.md  interview_qa.md.bak  reduce_max.cu  setup_env.sh  sgemm.cu  transpose.cu
cuda_kernel/: a.out  embedding.cu  layer_norm.cu  sgemm  sgemm.cu  sgemm_cute  sgemm_cute.cu  sgemv.cu  utils.py
cuda_kernel/add/: add.py
cuda_kernel/sgemm_cute/: CMakeLists.txt  my_sgemm_2d_ok.cu  sgemm_cute.cu  sgemm_cute.py  sgemm_cute_3d_ok.cu  sgemm_cute_test.cu
cutedsl/: add.py
cutedsl_ref/: 01_not_done.md  CUTE_API_CHEATSHEET.md  README.md  add.py  data_movement_hardware_paths.py  embedding.py  flash_attention_v4.py  gemm_boundary_handling.py  hgemm.py  layer_norm.py  reduce_max.py  sgemm.py  sgemm_explained.md  sgemm_hopper.py  sgemv.py  transpose.py
cutedsl_tutorial/: 01_hello_and_vecadd.py  02_layout.py  03_tiling_and_gemm.py  04_smem_and_pipeline.py  05_tensor_core_wmma.py  06_hopper_tma_wgmma.py  07_blackwell_tcgen05.py  08_flash_attention.py  09_advanced_techniques.py  10_tiled_copy_explained.py  11_composition_and_identity.py  12_swizzle_explained.py  13_constexpr_and_compile.py  14_parallel_reduction.py  15_dsl_user_op.py  README.py  tv_layout_demo.py  tv_layout_verify.py
hopper_fa3/: 01_hopper_features.cu  README.md  requirements.txt  run.py  setup_env.sh
origin_cuda_kernel/: .gitignore  README.md  plan.md
profile/: ncu_command.md  profile_learning.md  roofline_demo  roofline_demo.cu
ptx_asm/: README.md
triton/: .gitignore  add.py  gemm.py  layer-norm.py  reduce.py  reduce_max.py  softmax.py  utils.py
(+75 files in other folders)
